# manage-digital-ingest-flet-CollectionBuilder

./: .gitignore  BUILD.md  BUILD_SUCCESS_SUMMARY.md  DISTRIBUTION_INSTRUCTIONS.md  FLET_BUILD_SETUP.md  HISTORY.md  MACOS_BUILD_SUCCESS.md  PILLOW_QUICKSTART.md  PYMUPDF_VS_PDF2IMAGE.md  RELEASE_NOTES.md  STDLIB_MODULES_FIX.md  THUMBNAIL_MIGRATION.md  WEB_BUILD_SUCCESS.md  app.py  build-macos.sh  create-dmg.sh  gdp-oh-metadata-fields-11-23-25.csv  pyproject.toml  python-requirements.txt  run.bat  test_thumbnails.py  thumbnail.py
_data/: persistent.json
assets/: ICON_README.md
utilities/: README.md
views/: derivatives_view.py  file_selector_view.py  instructions_view.py  storage_view.py  update_csv_view.py
