[project]
name = "manage-digital-ingest"
version = "1.0.0"
description = "Manage Digital Ingest - CollectionBuilder metadata and derivative management tool"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Digital Grinnell", email = "digital@grinnell.edu" }
]
dependencies = [
    "flet>=0.28.2",
]

# Note: For web builds, many packages are not available in Pyodide.
# Full dependencies are in python-requirements.txt for desktop/development use.

[tool.flet]
org = "edu.grinnell.digital"
product = "Manage Digital Ingest"
company = "Digital Grinnell"
copyright = "Copyright (C) 2025 Digital Grinnell"

[tool.flet.app]
path = "."
module = "app"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
