[project]
name = "MDI"
version = "1.0.0"
description = "MDI - Manage Digital Ingest for CollectionBuilder metadata and derivative management"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Digital Grinnell", email = "digital@grinnell.edu" }
]
dependencies = [
    "flet>=0.28.2",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "Pillow>=10.0.0",
    "PyMuPDF>=1.24.0",
    "azure-storage-blob>=12.0.0",
    "azure-identity>=1.0.0",
    "cookiecutter>=2.0.0",
    "python-slugify>=8.0.0",
    "qrcode>=7.0.0",
    "PyYAML>=6.0.0",
    "requests>=2.31.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

# Note: For web builds, many packages are not available in Pyodide.
# Full dependencies are in python-requirements.txt for desktop/development use.

[tool.flet]
org = "edu.grinnell.digital"
product = "Manage Digital Ingest"
company = "Digital Grinnell"
copyright = "Copyright (C) 2025 Digital Grinnell"

[tool.flet.app]
path = "."
module = "app"
exclude = [
    ".venv",
    "venv",
    ".git",
    "__pycache__",
    "*.pyc",
    ".DS_Store",
    "build",
    "*.log"
]

# Pin to compatible webview version to avoid Dart 3.9 language errors
[tool.flet.flutter.dependencies]
webview_flutter_android = "3.16.0"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
